--- a/myproject/myapp/static/palamathihills.html
+++ b/myproject/myapp/static/palamathihills.html
@@ -14,7 +14,7 @@
     <hr>
     <h2>
         <center>
-            <img src="palamathi hills.jpg" width="300" height="168"
+            <img src="palamathihills.png" width="300" height="168"
         </center>
         <hr>
         <li align="left">
