--- a/myproject/myapp/static/vellorefort.html
+++ b/myproject/myapp/static/vellorefort.html
@@ -12,7 +12,7 @@
     <hr>
     <h2>
         <center>
-            <img src="vellore fort.jpg" width="424" height="119"
+            <img src="vellorefort.png" width="424" height="119"
         </center>
         <hr>
         <li align="left">
