--- a/myproject/myapp/static/vit.html
+++ b/myproject/myapp/static/vit.html
@@ -14,7 +14,7 @@
     <hr>
     <h2>
         <center>
-            <img src="VIT.png" width="800" height="400"
+            <img src="vit.png" width="800" height="400"
         </center>
         <hr>
         <li align="left">
