--- a/myproject/myapp/static/palamathitemple.html
+++ b/myproject/myapp/static/palamathitemple.html
@@ -14,7 +14,7 @@
     <hr>
     <h2>
         <center>
-            <img src="palamathi temple.jpg" width="550" height="413"
+            <img src="palamathitemple.png" width="550" height="413"
         </center>
         <hr>
         <li align="left">
